# Azur

./: .gitignore  .gitmodules  CMakeLists.txt  FindAzur.cmake  FindAzur3rdParty.cmake  README.md
.github/workflows/: build.yml
azur/: CMakeLists.txt  gen_glsl.py
azur/assets/: app_template.html
azur/glsl/: fs_prelude_gles2.glsl  fs_prelude_gles3.glsl  fs_tex2d.glsl  vs_prelude_gl3.glsl  vs_prelude_gles2.glsl  vs_prelude_gles3.glsl  vs_tex2d.glsl
azur/include/azur/: azur.h  config.h.in  defs.h  log.h  opengl.h  resources.h
azur/include/azur/gint/: render.h
azur/include/azur/gl/: gl.h  shaders.h
azur/include/azur/sdl_opengl/: gl.h
azur/src/: log.c  log.cpp  resources.cc
azur/src/gint/: init.cpp  r61523.s  r61524.s  render.c
azur/src/gint/shaders/: clear.S  clear.c  image.S  image.c  image_macros.S  image_p4.c  image_p4_dye.c  image_p4_effect.c  image_p4_normal.S  image_p4_swapcolor.c  image_p8.c  image_p8_dye.c  image_p8_effect.c  image_p8_normal.S  image_p8_swapcolor.S  image_p8_swapcolor.c  image_rgb16.c  image_rgb16_clearbg.S  image_rgb16_dye.S  image_rgb16_dye.c  image_rgb16_effect.c  image_rgb16_normal.S  image_rgb16_swapcolor.S  image_rgb16_swapcolor.c  line.c  rect.S  rect.c  tex2d.S  tex2d.c  text.S  text.c  triangle.S  triangle.c
azur/src/gl/: imgui.cpp  init.cpp  program.cc  surface.cc  texture.cc  util.cpp
azur/src/sdl_opengl/: init.c  util.c
azur/src/stb/: stb_image.c  stb_image_write.c
azur/tools/: gen-assets.py
docs/: Makefile  index.md  libraries.md  opengl.md  resources.md  stdoc.conf  tests.md
docs/_static/: doc.css
docs/_templates/: article.html  base.html
gl3w-builds/: CMakeLists.txt
glm-builds/: CMakeLists.txt
imgui-builds/: CMakeLists.txt
libnum/: CMakeLists.txt
libnum/include/num/: config.h.in  num.h  primitives.h  rect.h  vec.h
libnum/src/: num.cpp  static_checks.cpp  str.cpp
libnum/src/sh4aldsp/: div_i32_i16_i16.s
libnum/test/: isel.py  isel_num16.cpp  isel_num32.cpp  isel_num8.cpp  unit_check.h  unit_sample.h  unit_scalar.cpp  unit_static.cpp  unit_str.cpp
